# betta_8.2_hw

./: pyproject.toml
src/: widget.py
tests/: test_masks.py  test_processing.py  test_widget.py
